<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="DelButtonCaption">Delete record</string>
    <string name="weight_button">Weight</string>
    <string name="weist_button">Weist</string>
    <string name="hips_button">Hips</string>
    <string name="waist">waist</string>
    <string name="hips">hips</string>
    <string name="weight">Weight(kg)</string>
    <string name="menu_button_clicked_toast">Open %s editor</string>
    <string name="label_editor">editor</string>
    <string name="label_import">Import</string>
    <string name="label_export">Export</string>
    <string name="label_add_custom_measure">Add Custom</string>
    <string name="label_remove_all">Remove All</string>
    <string name="label_select_operation">Select operation</string>
    <string name="label_edit">Edit</string>
    <string name="label_remove">Remove</string>
    <string name="label_cancel">Cancel</string>
    <string formatted="false" name="toast_exported">All data has been exported to \"%s\" in downloads folder. Number of entities %s.</string>
    <string formatted="false" name="toast_exported_error">Export error: %s</string>
    <string name="label_import_bad_file">Bad file</string>
    <string name="label_error">Error</string>
    <string name="label_info">Info</string>
    <string name="label_import_successful">Import successful %s new entities.</string>
    <string name="label_alert">Alert</string>
    <string name="remove_all_confirmation">You about to delete all data, are you sure?</string>
    <string name="remove_all_end">Removed all %s entities.</string>
    <string name="label_remove_successful">Measurement: %s removed.</string>
    <string name="label_value">Value</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="profile">Profile</string>
    <string name="diet">Diet</string>
    <string name="memorize">Memorize</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="height">Height(cm)</string>
    <string name="lifestyle_active">Active</string>
    <string name="lifestyle_normal">Normal</string>
    <string name="lifestyle_passive">Passive</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="bmi">BMI</string>
    <string name="meals">Meals</string>
    <string name="meal">Meal</string>
    <string name="proteins">Proteins(g)</string>
    <string name="fats">Fats(g)</string>
    <string name="carbs">Carbs(g)</string>
    <string name="calories">Calories</string>
    <string name="tiffin">Tiffin</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="afternoon_snack">Afternoon Snack</string>
    <string name="lunch">Lunch</string>
    <string name="totals">Totals</string>
    <string name="add_new_product">+ Add New Product</string>
    <string name="weight_g">Weight(g)</string>
    <string name="product">Product</string>
    <string name="new_product_default_name">New Product</string>
    <string name="delete_product">Delete product</string>
</resources>
