<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
   <TextView

       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/label_value"/>
    <EditText
        android:id="@+id/edit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minWidth="200dp"
        tools:text="8.00"/>
    <TextView
        android:paddingTop="26dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"/>
    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        tools:ignore="UnusedAttribute">
    </DatePicker>

    <TextView
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        tools:ignore="UnusedAttribute">
    </TimePicker>
</LinearLayout>
</ScrollView>